--- a/MemoriaFlora/Storyboards/Details.storyboard
+++ b/MemoriaFlora/Storyboards/Details.storyboard
@@ -29,10 +29,10 @@
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LcL-yC-acN">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="615"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="627"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PJc-Tj-SGp" customClass="DesignableView" customModule="Spring">
-                                                <rect key="frame" x="20" y="20" width="353" height="542.33333333333337"/>
+                                                <rect key="frame" x="20" y="20" width="353" height="554.33333333333337"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserName" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QCa-q8-TO9">
                                                         <rect key="frame" x="24" y="24.000000000000004" width="219" height="38.333333333333343"/>
@@ -97,18 +97,30 @@
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="PxZ-yV-cnx">
-                                                        <rect key="frame" x="24" y="72.333333333333343" width="108" height="17"/>
+                                                        <rect key="frame" x="24" y="72.333333333333343" width="208" height="44"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date of demise: " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ygh-vo-5kZ">
-                                                                <rect key="frame" x="0.0" y="0.0" width="108" height="17"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="208" height="17"/>
+                                                                <fontDescription key="fontDescription" name="SFProText-Regular" family="SF Pro Text" pointSize="14"/>
+                                                                <color key="textColor" red="0.2784313725" green="0.2784313725" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date of demise: " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NtL-Cv-NSc">
+                                                                <rect key="frame" x="0.0" y="27" width="208" height="17"/>
                                                                 <fontDescription key="fontDescription" name="SFProText-Regular" family="SF Pro Text" pointSize="14"/>
                                                                 <color key="textColor" red="0.2784313725" green="0.2784313725" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                         </subviews>
+                                                        <constraints>
+                                                            <constraint firstAttribute="trailing" secondItem="NtL-Cv-NSc" secondAttribute="trailing" id="G21-jB-CX5"/>
+                                                            <constraint firstAttribute="trailing" secondItem="ygh-vo-5kZ" secondAttribute="trailing" id="Ogm-qw-elx"/>
+                                                            <constraint firstItem="ygh-vo-5kZ" firstAttribute="leading" secondItem="PxZ-yV-cnx" secondAttribute="leading" id="Qv2-bW-hqK"/>
+                                                            <constraint firstItem="NtL-Cv-NSc" firstAttribute="leading" secondItem="PxZ-yV-cnx" secondAttribute="leading" id="qOi-wN-yuO"/>
+                                                        </constraints>
                                                     </stackView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Yl-me-jWq" customClass="DesignableView" customModule="Spring">
-                                                        <rect key="frame" x="24" y="109.33333333333337" width="305" height="300"/>
+                                                        <rect key="frame" x="24" y="136.33333333333337" width="305" height="300"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_grave" translatesAutoresizingMaskIntoConstraints="NO" id="Efz-o5-Bnv" customClass="DesignableImageView" customModule="Spring">
                                                                 <rect key="frame" x="0.0" y="0.0" width="305" height="300"/>
@@ -137,7 +149,7 @@
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="m1r-3t-Nmw">
-                                                        <rect key="frame" x="24" y="421.33333333333331" width="305" height="17"/>
+                                                        <rect key="frame" x="24" y="448.33333333333337" width="305" height="17"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eg1-Yg-7GG">
                                                                 <rect key="frame" x="0.0" y="0.0" width="305" height="17"/>
@@ -148,10 +160,10 @@
                                                         </subviews>
                                                     </stackView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AL8-NF-OLg" customClass="DesignableButton" customModule="Spring">
-                                                        <rect key="frame" x="24" y="468.33333333333337" width="305" height="50"/>
+                                                        <rect key="frame" x="24" y="495.33333333333337" width="305" height="35"/>
                                                         <color key="backgroundColor" red="0.47450980390000003" green="0.24313725489999999" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="50" id="ayg-c7-gie"/>
+                                                            <constraint firstAttribute="height" constant="35" id="ayg-c7-gie"/>
                                                         </constraints>
                                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <state key="normal" title="Button"/>
@@ -160,7 +172,7 @@
                                                         </buttonConfiguration>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                                <real key="value" value="15"/>
+                                                                <real key="value" value="10"/>
                                                             </userDefinedRuntimeAttribute>
                                                             <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
                                                                 <color key="value" red="0.47450980390000003" green="0.24313725489999999" blue="0.8980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="calibratedRGB"/>
@@ -191,6 +203,7 @@
                                                     <constraint firstItem="m1r-3t-Nmw" firstAttribute="top" secondItem="1Yl-me-jWq" secondAttribute="bottom" constant="12" id="JJt-U5-swP"/>
                                                     <constraint firstAttribute="trailing" secondItem="Z6p-aA-cPa" secondAttribute="trailing" constant="15" id="N9Q-ph-rUT"/>
                                                     <constraint firstItem="Z6p-aA-cPa" firstAttribute="top" secondItem="PJc-Tj-SGp" secondAttribute="top" constant="15" id="Pgn-Td-oJZ"/>
+                                                    <constraint firstItem="Z6p-aA-cPa" firstAttribute="leading" secondItem="PxZ-yV-cnx" secondAttribute="trailing" constant="16" id="QU3-LZ-H03"/>
                                                     <constraint firstItem="PxZ-yV-cnx" firstAttribute="top" secondItem="QCa-q8-TO9" secondAttribute="bottom" constant="10" id="SOO-ef-wSi"/>
                                                     <constraint firstItem="AL8-NF-OLg" firstAttribute="leading" secondItem="PJc-Tj-SGp" secondAttribute="leading" constant="24" id="SiX-AY-SeZ"/>
                                                     <constraint firstItem="m1r-3t-Nmw" firstAttribute="leading" secondItem="PJc-Tj-SGp" secondAttribute="leading" constant="24" id="Vtj-Fe-dmQ"/>
@@ -210,7 +223,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="pG2-ah-eHj">
-                                                <rect key="frame" x="20" y="575" width="353" height="10"/>
+                                                <rect key="frame" x="20" y="587" width="353" height="10"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="10" id="5lG-oo-FeB"/>
@@ -259,6 +272,7 @@
                         <outlet property="containerView" destination="1Yl-me-jWq" id="wdL-wz-QmS"/>
                         <outlet property="demiseLabel" destination="ygh-vo-5kZ" id="UXF-wc-vCw"/>
                         <outlet property="detailLabel" destination="eg1-Yg-7GG" id="Mk1-RK-Uyj"/>
+                        <outlet property="funeralAgencyLabel" destination="NtL-Cv-NSc" id="Tm8-4A-mDi"/>
                         <outlet property="imgView" destination="Efz-o5-Bnv" id="yHo-YD-L9V"/>
                         <outlet property="nameLabel" destination="QCa-q8-TO9" id="4ur-y7-NVU"/>
                         <outlet property="shareBackground" destination="Z6p-aA-cPa" id="oIe-w1-QvV"/>
