--- a/MemoriaFlora/Storyboards/Flowers.storyboard
+++ b/MemoriaFlora/Storyboards/Flowers.storyboard
@@ -103,6 +103,18 @@
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Caa-9h-yGC">
+                                <rect key="frame" x="350" y="83" width="27" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="0qr-t4-L36"/>
+                                    <constraint firstAttribute="width" constant="27" id="9ag-IF-EJ3"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="ic_close" title=" " subtitle=" "/>
+                                <connections>
+                                    <action selector="onClickCloseButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="wXj-De-sNq"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" red="0.96862745098039216" green="0.96862745098039216" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
@@ -111,6 +123,8 @@
                             <constraint firstItem="Fpy-w8-y0N" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" constant="24" id="1aG-y8-dZF"/>
                             <constraint firstItem="S4L-0C-aZl" firstAttribute="top" secondItem="m1G-J5-mdH" secondAttribute="bottom" constant="24" id="5Gv-we-Fva"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="7rv-q2-1md" secondAttribute="bottom" constant="32" id="5mR-mt-JWH"/>
+                            <constraint firstItem="Caa-9h-yGC" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="30" id="7Jb-yW-jed"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Caa-9h-yGC" secondAttribute="trailing" constant="16" id="9pf-1w-LqF"/>
                             <constraint firstItem="Tax-Up-iRt" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="A5w-Xw-NVU"/>
                             <constraint firstItem="Tax-Up-iRt" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="32" id="AsW-UQ-Tbx"/>
                             <constraint firstAttribute="trailing" secondItem="Fpy-w8-y0N" secondAttribute="trailing" constant="24" id="MNU-KR-MYP"/>
@@ -525,6 +539,7 @@
     <resources>
         <image name="Wallet" width="54.666667938232422" height="49"/>
         <image name="apple_pay" width="512" height="399"/>
+        <image name="ic_close" width="27" height="27"/>
         <image name="placeholderprofile" width="100" height="100"/>
         <image name="stripe" width="100" height="100"/>
         <image name="visa" width="52" height="52"/>
